--- a/.github/workflows/run_scrapes.yml
+++ b/.github/workflows/run_scrapes.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: r-lib/actions/setup-r@master
+      - uses: r-lib/actions/setup-r@v2
       - name: Package Installation
         run: Rscript -e 'install.packages(c("dplyr", "rvest", "httr", "stringr", "here", "jsonlite"))'
       - name: Updated Data
